# opengl-sdl-glad

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/App/: App.h
include/glad/: glad.h
playground/: Makefile  glm_0.cpp  glm_1.cpp
shaders/: frag.glsl  vert.glsl
src/: App.cpp  CMakeLists.txt  glad.c  main.cpp
